--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
 	"files": [
 		"publish"
 	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/MAJOR-KENIX/joplin-plugin-sis-copy-code.git"
+	},
 	"devDependencies": {
 		"@types/node": "^18.7.13",
 		"chalk": "^4.1.0",
